--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   google_sign_in: ^4.5.3
   firebase_core: ^0.5.0
   firebase_auth: ^0.18.0+1
+  dio: 3.0.10
+  shared_preferences: ^0.5.10
 
   flutter:
     sdk: flutter
