--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   firebase_auth: ^0.18.0+1
   dio: 3.0.10
   shared_preferences: ^0.5.10
+  url_launcher: ^5.5.3
 
   flutter:
     sdk: flutter
