--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -39,6 +39,7 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.istrides.afynder"
+        multiDexEnabled true
         minSdkVersion 20
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
@@ -61,6 +62,7 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.google.firebase:firebase-analytics:17.5.0'
+    implementation 'com.android.support:multidex:1.0.3'
 }
 
 apply plugin: 'com.android.application'
