--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   dio: 3.0.10
   shared_preferences: ^0.5.10
   url_launcher: ^5.5.3
+  intl: ^0.16.1
+  image_picker: ^0.6.7+7
+  image_cropper: ^1.3.1
 
   flutter:
     sdk: flutter
