--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   intl: ^0.16.1
   image_picker: ^0.6.7+7
   image_cropper: ^1.3.1
+  geolocator: ^6.0.0+4
+  flutter_facebook_login: ^3.0.0
+
+
 
   flutter:
     sdk: flutter
