--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   image_picker: ^0.6.7+7
   image_cropper: ^1.3.1
   geolocator: ^6.0.0+4
-  flutter_facebook_login: ^3.0.0
+
 
 
 
@@ -69,9 +69,10 @@ flutter:
         - asset: fonts/pacifico-Regular.ttf
 
 
-    - family: kalam
+    - family: courgette
       fonts:
-        - asset: fonts/Kalam-Regular.ttf
+        - asset: fonts/Courgette-Regular.ttf
+
 
 
   # For details regarding fonts from package dependencies,
