--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   image_picker: ^0.6.7+7
   image_cropper: ^1.3.1
   geolocator: ^6.0.0+4
+  fluttertoast: ^7.1.1
+  pretty_dio_logger: ^1.1.1
 
 
 
